# claude-code-db-plugin

./: .gitattributes  .gitignore  LICENSE  README.en.md  README.md  README.zh.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
src/db_plugin/: __init__.py  main.py
src/db_plugin/core/: __init__.py  connection.py  executor.py  logger.py  query_worker.py
src/db_plugin/data/: addresses.json
src/db_plugin/data/locales/: en_US.json  zh_CN.json
src/db_plugin/dialects/: __init__.py  dialect_base.py  kingbase.py  mysql.py
src/db_plugin/gui/: app.py  i18n.py  main_window.py  style.py
src/db_plugin/gui/dialogs/: connection_dialog.py  fake_data_dialog.py  history_dialog.py  import_export_dialog.py
src/db_plugin/gui/widgets/: data_browser.py  object_tree.py  sql_editor.py  sql_highlighter.py
src/db_plugin/models/: __init__.py  config.py  history.py  result.py  schema.py
src/db_plugin/services/: __init__.py  addresses.py  connection_manager.py  crud_service.py  fake_data_generator.py  import_export.py  query_history.py
tests/: test_core.py  test_dialect_registry.py  test_dialects.py  test_logger.py  test_models.py  test_query_worker.py  test_services.py
