[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-db-plugin"
version = "0.1.0"
description = "A database management GUI tool with multi-dialect support"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "PySide6>=6.6",
    "psycopg2-binary>=2.9",
    "pymysql>=1.0",
    "faker>=20.0",
    "openpyxl>=3.1",
    "cryptography>=3.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
db-plugin = "db_plugin.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
