[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-db-plugin"
version = "0.1.0"
description = "A database management GUI tool with multi-dialect support"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "PySide6>=6.6",
    "psycopg2-binary>=2.9",
    "pymysql>=1.0",
    "faker>=20.0",
    "openpyxl>=3.1",
    "cryptography>=3.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-qt>=4.0"]

[project.scripts]
db-plugin = "db_plugin.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
"db_plugin.data" = ["*.json"]

[project.entry-points."db_plugin.dialects"]
# Third-party dialects can register themselves here:
# kingbase = "my_kingbase_dialect:KingbaseDialect"

[tool.coverage.run]
source = ["db_plugin"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
fail_under = 40
show_missing = true
